--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Gatitas's Arts & Crafts</title>
+    <title>Dasmoto's Arts & Crafts</title>
     <link href="./Resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
-    <h1 class="maintitle">Gatitas's Arts & Crafts</h1>
+    <h1 class="maintitle">Dasmoto's Arts & Crafts</h1>
 
     <!--Brushes Section-->
     <h2 class="brushes">Brushes</h2>
